Update portfolio projects and skills sections; modified resume link.

--- a/cleanfolio-minimal-main/index.html
+++ b/cleanfolio-minimal-main/index.html
@@ -18,7 +18,7 @@
     <title>Drew Otten</title>
   </head>
   <body class="light" id="top">
-    <header class="header center">
+    <header class="header center">     
       <h3>
         <a href="https://rjshkhr.github.io/cleanfolio-minimal" class="link"
           >DO.</a
@@ -66,7 +66,7 @@
         </p>
 
         <div class="about__contact center">
-          <a href="https://example.com">
+          <a href="https://www.dropbox.com/scl/fi/q21clfhllf09u3wg0hogh/Drew-Otten_resume_.pdf?rlkey=kn2vhpgi11fnbfsiknmg9nxsz&st=blsfncom&dl=0">
             <span class="btn btn--outline">Resume</span>
           </a>
 
@@ -94,7 +94,67 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Project 1</h3>
+            <h3>To-Do List site [in progress]</h3>
+            <p class="project__description">
+              Designed for the user to keep track of their daily tasks. 
+              Users can add, edit, and delete tasks as needed. The website is
+              built using HTML, CSS, and JavaScript, and is fully responsive for
+              use on any device.
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">HTML</li>
+              <li class="project__stack-item">CSS</li>
+              <li class="project__stack-item">JavaScript</li>
+            </ul>
+
+            <a
+              href="https://github.com"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://example.com"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+
+
+          <div class="project">
+            <h3>Phishing Awareness Simulation [in progress]</h3>
+            <p class="project__description">
+              Designed a phishing simulation in a safe lab environment to analyze email headers and logs.
+              The goal was to educate users on how to identify and avoid phishing attacks in the future.
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">HTML</li>
+              <li class="project__stack-item">CSS</li>
+              <li class="project__stack-item">React</li>
+            </ul>
+
+            <a
+              href="https://github.com"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://example.com"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+
+
+          <div class="project">
+            <h3>Weather App [in progress]</h3>
             <p class="project__description">
               Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
               sapiente debitis labore sed ipsam Mollitia repellat illum quod
@@ -122,8 +182,10 @@
             </a>
           </div>
 
+          <!-- Inactive 
+
           <div class="project">
-            <h3>Project 2</h3>
+            <h3>Project 4</h3>
             <p class="project__description">
               Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
               sapiente debitis labore sed ipsam Mollitia repellat illum quod
@@ -135,34 +197,7 @@
               <li class="project__stack-item">React</li>
             </ul>
 
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
-          </div>
-
-          <div class="project">
-            <h3>Project 3</h3>
-            <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-            </ul>
+            -->
 
             <a
               href="https://github.com"
@@ -186,40 +221,30 @@
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
         <ul class="skills__list">
+          <li class="skills__list-item btn btn--plain">Windows 10/11</li>
+          <li class="skills__list-item btn btn--plain">Kali Linux</li>
+          <li class="skills__list-item btn btn--plain">MacOS</li>
           <li class="skills__list-item btn btn--plain">HTML</li>
           <li class="skills__list-item btn btn--plain">CSS</li>
-          <li class="skills__list-item btn btn--plain">SCSS</li>
           <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">TypeScript</li>
-          <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Redux</li>
-          <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">Material UI</li>
-          <li class="skills__list-item btn btn--plain">Jest</li>
-          <li class="skills__list-item btn btn--plain">Enzyme</li>
-          <li class="skills__list-item btn btn--plain">CI/CD</li>
+          <li class="skills__list-item btn btn--plain">Python</li>
+          <li class="skills__list-item btn btn--plain">C/C++</li>
+          <li class="skills__list-item btn btn--plain">Git</li>         
+          <li class="skills__list-item btn btn--plain">+</li>
         </ul>
       </section>
 
       <!-- Contact -->
       <section class="section contact center" id="contact">
         <h2 class="section__title">Contact</h2>
-        <a href="mailto:rjshekhar.official@gmail.com">
-          <span class="btn btn--outline">Email me</span>
+        <a href="mailto:dso3747@gmail.com">
+        <span class="btn btn--outline">Email me</span>
         </a>
       </section>
     </main>
 
-    <footer class="footer">
-      <a
-        href="https://github.com/rjshkhr/cleanfolio-minimal"
-        class="link footer__link"
-      >
-        Created By Raj Shekhar
-      </a>
-    </footer>
-
-    <div class="scroll-container">
+    <!-- Scroll to top -->
+      <div class="scroll-container">
       <div class="scroll-top">
         <a aria-label="Scroll up" href="#top">
           <i aria-hidden="true" class="fas fa-arrow-up"></i>
@@ -227,6 +252,10 @@
       </div>
     </div>
 
+    <!-- spacer at bottom -->
+    <div style="height:100px;"></div>
+
+    <!-- JavaScript -->
     <script src="./script.js"></script>
   </body>
 </html>
