Update portfolio link in index.html

--- a/cleanfolio-minimal-main/index.html
+++ b/cleanfolio-minimal-main/index.html
@@ -20,7 +20,7 @@
   <body class="light" id="top">
     <header class="header center">     
       <h3>
-        <a href="https://rjshkhr.github.io/cleanfolio-minimal" class="link"
+        <a href="https://d0tten.github.io/cleanfolio-min" class="link"
           >DO.</a
         >
       </h3>
