--- a/cleanfolio-minimal-main/index.html
+++ b/cleanfolio-minimal-main/index.html
@@ -20,7 +20,8 @@
   <body class="light" id="top">
     <header class="header center">     
       <h3>
-        <a href="https://d0tten.github.io/cleanfolio-min" class="link"
+        <a href="file:///C:/Users/dso37/OneDrive/Documents/%23Work/GitHub%20Projects/cleanfolio-minimal-main/cleanfolio-minimal-main/index.html" 
+          class="link"
           >DO.</a
         >
       </h3>
@@ -196,9 +197,7 @@
               <li class="project__stack-item">TypeScript</li>
               <li class="project__stack-item">React</li>
             </ul>
-
-            -->
-
+           
             <a
               href="https://github.com"
               aria-label="source code"
@@ -212,6 +211,8 @@
               class="link link--icon"
             >
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+              -->
+              
             </a>
           </div>
         </div>
